src/lib/gml.parser.mjs
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Program: peg$parseProgram,
    Tokens: peg$parseTokens,
  };
  let peg$startRuleFunction = peg$parseProgram;

  const peg$c0 = ";";
  const peg$c1 = "{";
  const peg$c2 = "}";
  const peg$c3 = "globalvar";
  const peg$c4 = "var";
  const peg$c5 = ",";
  const peg$c6 = "=";
  const peg$c7 = "if";
  const peg$c8 = "then";
  const peg$c9 = "else";
  const peg$c10 = "while";
  const peg$c11 = "with";
  const peg$c12 = "repeat";
  const peg$c13 = "do";
  const peg$c14 = "until";
  const peg$c15 = "for";
  const peg$c16 = "(";
  const peg$c17 = ")";
  const peg$c18 = "switch";
  const peg$c19 = "case";
  const peg$c20 = ":";
  const peg$c21 = "default";
  const peg$c22 = "break";
  const peg$c23 = "continue";
  const peg$c24 = "exit";
  const peg$c25 = "return";
  const peg$c26 = "<<=";
  const peg$c27 = ">>=";
  const peg$c28 = ":=";
  const peg$c29 = "+=";
  const peg$c30 = "-=";
  const peg$c31 = "*=";
  const peg$c32 = "/=";
  const peg$c33 = "|=";
  const peg$c34 = "&=";
  const peg$c35 = "^=";
  const peg$c36 = "||";
  const peg$c37 = "or";
  const peg$c38 = "&&";
  const peg$c39 = "and";
  const peg$c40 = "^^";
  const peg$c41 = "xor";
  const peg$c42 = "==";
  const peg$c43 = "!=";
  const peg$c44 = "<>";
  const peg$c45 = "<=";
  const peg$c46 = ">=";
  const peg$c47 = "<";
  const peg$c48 = ">";
  const peg$c49 = "|";
  const peg$c50 = "&";
  const peg$c51 = "^";
  const peg$c52 = "<<";
  const peg$c53 = ">>";
  const peg$c54 = "+";
  const peg$c55 = "-";
  const peg$c56 = "*";
  const peg$c57 = "/";
  const peg$c58 = "%";
  const peg$c59 = "div";
  const peg$c60 = "mod";
  const peg$c61 = "!";
  const peg$c62 = "~";
  const peg$c63 = "not";
  const peg$c64 = "++";
  const peg$c65 = "--";
  const peg$c66 = "[";
  const peg$c67 = "]";
  const peg$c68 = ".";
  const peg$c69 = "\"";
  const peg$c70 = "'";
  const peg$c71 = "$";
  const peg$c72 = "//";
  const peg$c73 = "/*";
  const peg$c74 = "*/";

  const peg$r0 = /^[;}]/;
  const peg$r1 = /^[<=>]/;
  const peg$r2 = /^[>=]/;
  const peg$r3 = /^[|=]/;
  const peg$r4 = /^[&=]/;
  const peg$r5 = /^[\^=]/;
  const peg$r6 = /^[+=]/;
  const peg$r7 = /^[\-=]/;
  const peg$r8 = /^[=\/*]/;
  const peg$r9 = /^[0-9]/;
  const peg$r10 = /^[\-+*%<>=!&|\^~?:;,.()[\]{}]/;
  const peg$r11 = /^[^"]/;
  const peg$r12 = /^[^']/;
  const peg$r13 = /^[0-9a-fA-F]/;
  const peg$r14 = /^[A-Za-z_]/;
  const peg$r15 = /^[A-Za-z0-9_]/;
  const peg$r16 = /^[\t\n\v\f\r \xA0\u1680\u2000-\u200A\u2028\u2029\u202F\u205F\u3000\uFEFF]/;
  const peg$r17 = /^[^\n]/;

  const peg$e0 = peg$anyExpectation();
  const peg$e1 = peg$literalExpectation(";", false);
  const peg$e2 = peg$literalExpectation("{", false);
  const peg$e3 = peg$literalExpectation("}", false);
  const peg$e4 = peg$literalExpectation("globalvar", false);
  const peg$e5 = peg$literalExpectation("var", false);
  const peg$e6 = peg$literalExpectation(",", false);
  const peg$e7 = peg$literalExpectation("=", false);
  const peg$e8 = peg$literalExpectation("if", false);
  const peg$e9 = peg$literalExpectation("then", false);
  const peg$e10 = peg$literalExpectation("else", false);
  const peg$e11 = peg$literalExpectation("while", false);
  const peg$e12 = peg$literalExpectation("with", false);
  const peg$e13 = peg$literalExpectation("repeat", false);
  const peg$e14 = peg$literalExpectation("do", false);
  const peg$e15 = peg$literalExpectation("until", false);
  const peg$e16 = peg$literalExpectation("for", false);
  const peg$e17 = peg$literalExpectation("(", false);
  const peg$e18 = peg$literalExpectation(")", false);
  const peg$e19 = peg$literalExpectation("switch", false);
  const peg$e20 = peg$literalExpectation("case", false);
  const peg$e21 = peg$literalExpectation(":", false);
  const peg$e22 = peg$literalExpectation("default", false);
  const peg$e23 = peg$literalExpectation("break", false);
  const peg$e24 = peg$literalExpectation("continue", false);
  const peg$e25 = peg$literalExpectation("exit", false);
  const peg$e26 = peg$literalExpectation("return", false);
  const peg$e27 = peg$classExpectation([";", "}"], false, false, false);
  const peg$e28 = peg$literalExpectation("<<=", false);
  const peg$e29 = peg$literalExpectation(">>=", false);
  const peg$e30 = peg$literalExpectation(":=", false);
  const peg$e31 = peg$literalExpectation("+=", false);
  const peg$e32 = peg$literalExpectation("-=", false);
  const peg$e33 = peg$literalExpectation("*=", false);
  const peg$e34 = peg$literalExpectation("/=", false);
  const peg$e35 = peg$literalExpectation("|=", false);
  const peg$e36 = peg$literalExpectation("&=", false);
  const peg$e37 = peg$literalExpectation("^=", false);
  const peg$e38 = peg$literalExpectation("||", false);
  const peg$e39 = peg$literalExpectation("or", false);
  const peg$e40 = peg$literalExpectation("&&", false);
  const peg$e41 = peg$literalExpectation("and", false);
  const peg$e42 = peg$literalExpectation("^^", false);
  const peg$e43 = peg$literalExpectation("xor", false);
  const peg$e44 = peg$literalExpectation("==", false);
  const peg$e45 = peg$literalExpectation("!=", false);
  const peg$e46 = peg$literalExpectation("<>", false);
  const peg$e47 = peg$literalExpectation("<=", false);
  const peg$e48 = peg$literalExpectation(">=", false);
  const peg$e49 = peg$literalExpectation("<", false);
  const peg$e50 = peg$classExpectation(["<", "=", ">"], false, false, false);
  const peg$e51 = peg$literalExpectation(">", false);
  const peg$e52 = peg$classExpectation([">", "="], false, false, false);
  const peg$e53 = peg$literalExpectation("|", false);
  const peg$e54 = peg$classExpectation(["|", "="], false, false, false);
  const peg$e55 = peg$literalExpectation("&", false);
  const peg$e56 = peg$classExpectation(["&", "="], false, false, false);
  const peg$e57 = peg$literalExpectation("^", false);
  const peg$e58 = peg$classExpectation(["^", "="], false, false, false);
  const peg$e59 = peg$literalExpectation("<<", false);
  const peg$e60 = peg$literalExpectation(">>", false);
  const peg$e61 = peg$literalExpectation("+", false);
  const peg$e62 = peg$classExpectation(["+", "="], false, false, false);
  const peg$e63 = peg$literalExpectation("-", false);
  const peg$e64 = peg$classExpectation(["-", "="], false, false, false);
  const peg$e65 = peg$literalExpectation("*", false);
  const peg$e66 = peg$literalExpectation("/", false);
  const peg$e67 = peg$classExpectation(["=", "/", "*"], false, false, false);
  const peg$e68 = peg$literalExpectation("%", false);
  const peg$e69 = peg$literalExpectation("div", false);
  const peg$e70 = peg$literalExpectation("mod", false);
  const peg$e71 = peg$literalExpectation("!", false);
  const peg$e72 = peg$literalExpectation("~", false);
  const peg$e73 = peg$literalExpectation("not", false);
  const peg$e74 = peg$literalExpectation("++", false);
  const peg$e75 = peg$literalExpectation("--", false);
  const peg$e76 = peg$literalExpectation("[", false);
  const peg$e77 = peg$literalExpectation("]", false);
  const peg$e78 = peg$literalExpectation(".", false);
  const peg$e79 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e80 = peg$classExpectation(["-", "+", "*", "%", "<", ">", "=", "!", "&", "|", "^", "~", "?", ":", ";", ",", ".", "(", ")", "[", "]", "{", "}"], false, false, false);
  const peg$e81 = peg$literalExpectation("\"", false);
  const peg$e82 = peg$classExpectation(["\""], true, false, false);
  const peg$e83 = peg$literalExpectation("'", false);
  const peg$e84 = peg$classExpectation(["'"], true, false, false);
  const peg$e85 = peg$literalExpectation("$", false);
  const peg$e86 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false, false);
  const peg$e87 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false, false);
  const peg$e88 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false, false);
  const peg$e89 = peg$classExpectation(["\t", "\n", "\v", "\f", "\r", " ", "\xA0", "\u1680", ["\u2000", "\u200A"], "\u2028", "\u2029", "\u202F", "\u205F", "\u3000", "\uFEFF"], false, false, false);
  const peg$e90 = peg$literalExpectation("//", false);
  const peg$e91 = peg$classExpectation(["\n"], true, false, false);
  const peg$e92 = peg$literalExpectation("/*", false);
  const peg$e93 = peg$literalExpectation("*/", false);

  function peg$f0(start, body) {    return { type: 'Block', start, end: input.length, body };  }
  function peg$f1(start) {    return node('Empty', start);  }
  function peg$f2(statement) {    statement.end = range().end; return statement;  }
  function peg$f3(start, body) {    return { type: 'Block', start, end: range().end, body };  }
  function peg$f4(start, kind, decls) {    return node('Var', start, { kind, decls });  }
  function peg$f5(head, tail) {    return [head, ...tail];  }
  function peg$f6(target, value) {
    return value ? { type: 'Assign', start: target.start, end: value.end, target, op: '=', value } : target;
  }
  function peg$f7(start, test, consequent, alternate) {
    return node('If', start, { test, consequent, alternate });
  }
  function peg$f8(start, kind, test, body) {
    return node({ while: 'While', with: 'With', repeat: 'Repeat' }[kind], start, { test, body });
  }
  function peg$f9(start, body, test) {    return node('DoUntil', start, { body, test });  }
  function peg$f10(start, init, test, update, body) {
    return node('For', start, { init, test, update, body });
  }
  function peg$f11(start, disc, body) {    return node('Switch', start, { disc, body });  }
  function peg$f12(start, test) {    return node('Case', start, { test });  }
  function peg$f13(start) {    return node('Case', start, { test: null });  }
  function peg$f14(start, kind) {    return node('Jump', start, { kind });  }
  function peg$f15(start, arg) {    return node('Return', start, { arg });  }
  function peg$f16(start, target, assign) {    return assign || target.type === 'Call' || target.type === 'Update';  }
  function peg$f17(start, target, assign) {
    return assign
      ? node('Assign', start, { target, op: assign[0], value: assign[1] })
      : node('ExprStmt', start, { expr: target });
  }
  function peg$f18(head, tail) {    return binary(head, tail);  }
  function peg$f19(head, tail) {    return binary(head, tail);  }
  function peg$f20(head, tail) {    return binary(head, tail);  }
  function peg$f21(head, tail) {    return binary(head, tail);  }
  function peg$f22(head, tail) {    return binary(head, tail);  }
  function peg$f23(head, tail) {    return binary(head, tail);  }
  function peg$f24(head, tail) {    return binary(head, tail);  }
  function peg$f25(head, tail) {    return binary(head, tail);  }
  function peg$f26(start, op, arg) {    return node('Unary', start, { op, arg });  }
  function peg$f27(start, op, arg) {    return node('Update', start, { op, prefix: true, arg });  }
  function peg$f28(head, tail) {    return tail.reduce((n, make) => make(n), head);  }
  function peg$f29(callee, args) {    return node('Call', callee.start, { callee, args: args ?? [] });  }
  function peg$f30(head, tail) {    return [head, ...tail];  }
  function peg$f31(index) {
    const end = range().end;
    return (object) => ({ type: 'Index', start: object.start, end, object, index });
  }
  function peg$f32(prop) {
    const end = range().end;
    return (object) => ({ type: 'Member', start: object.start, end, object, prop });
  }
  function peg$f33(op) {
    const end = range().end;
    return (arg) => ({ type: 'Update', start: arg.start, end, op, prefix: false, arg });
  }
  function peg$f34(start, value) {    return node('String', start, { value });  }
  function peg$f35(start, value) {    return node('Number', start, { value });  }
  function peg$f36(start, expr) {    return node('Paren', start, { expr });  }
  function peg$f37(start, name) {    return node('Identifier', start, { name });  }
  function peg$f38(tokens) {    return [...tokens, { type: 'eof', value: '', start: input.length, end: input.length }];  }
  function peg$f39(value) {    return tok('str', value);  }
  function peg$f40(value) {    return tok('num', value);  }
  function peg$f41(value) {    return tok('id', value);  }
  function peg$f42(value) {    return tok('op', value);  }
  function peg$f43() {    return offset();  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseProgram() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parsePos();
    s3 = [];
    s4 = peg$parseStatement();
    while (s4 !== peg$FAILED) {
      s3.push(s4);
      s4 = peg$parseStatement();
    }
    s4 = peg$parse_();
    s5 = peg$currPos;
    peg$silentFails++;
    if (input.length > peg$currPos) {
      s6 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s6 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    peg$silentFails--;
    if (s6 === peg$FAILED) {
      s5 = undefined;
    } else {
      peg$currPos = s5;
      s5 = peg$FAILED;
    }
    if (s5 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f0(s2, s3);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStatement() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseS();
    if (input.charCodeAt(peg$currPos) === 59) {
      s2 = peg$c0;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f1(s1);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseBlock();
      if (s0 === peg$FAILED) {
        s0 = peg$parseVarStatement();
        if (s0 === peg$FAILED) {
          s0 = peg$parseIfStatement();
          if (s0 === peg$FAILED) {
            s0 = peg$parseLoopStatement();
            if (s0 === peg$FAILED) {
              s0 = peg$parseDoStatement();
              if (s0 === peg$FAILED) {
                s0 = peg$parseForStatement();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseSwitchStatement();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseJumpStatement();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseReturnStatement();
                      if (s0 === peg$FAILED) {
                        s0 = peg$currPos;
                        s1 = peg$parseSimpleStatement();
                        if (s1 !== peg$FAILED) {
                          s2 = peg$parseSemi();
                          peg$savedPos = s0;
                          s0 = peg$f2(s1);
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseSemi() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.charCodeAt(peg$currPos) === 59) {
      s2 = peg$c0;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s2 !== peg$FAILED) {
      s1 = [s1, s2];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = null;
    }

    return s0;
  }

  function peg$parseBlock() {
    let s0, s1, s2, s3, s4, s5;
